# moonbot_self_recognition

./: .gitignore  README.md
dynamixel_hardware/: CMakeLists.txt  dynamixel_hardware.xml  package.xml
dynamixel_hardware/config/: LF_config.yaml  LR_config.yaml  RF_config.yaml  RR_config.yaml  grieel_config.yaml  single_config.yaml
dynamixel_hardware/include/dynamixel_hardware/: dynamixel_hardware.hpp  visibility_control.h
dynamixel_hardware/launch/: Grieel.launch.py  Grieel.py  LF.launch.py  LF.py  LR.launch.py  LR.py  RF.launch.py  RF.py  RR.launch.py  RR.py  __init__.py  brinng_up_on_hardware.launch.py
dynamixel_hardware/src/: dynamixel_hardware.cpp
install/trial/share/trial/: move.launch.py  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
moonbot_camera/: CMakeLists.txt  package.xml
moonbot_camera/config/: Gustavo.py  training.py
moonbot_camera/config/datasets/: README.dataset.txt  README.roboflow.txt  data.yaml
moonbot_camera/config/datasets/test/labels/: moonbot_1698415335-4009616_png.rf.aa4a68055d046bc34cb90bcf4df90af9.txt  moonbot_1698415350-2088842_png.rf.77390ed026b376ebcb6a3f20d31d5547.txt  moonbot_1698415371-307192_png.rf.74169ab946ed775d3b320c9f595a9ff5.txt  moonbot_1698415524-385187_png.rf.683d615ad1137315c99eaee1144d5a3c.txt  moonbot_1698415648-3689032_png.rf.819d9b808d8e9093a6ce2a24889e9309.txt  moonbot_1698415733-498453_png.rf.6b1c24ec96a7fa0f93a81503e8f86ce9.txt  moonbot_1698415752-5683765_png.rf.4679fa6777a15f2b0b39be5a52d0d314.txt  moonbot_1698415819-29256_png.rf.4b70070dceb0adb854277c8d66b49df3.txt  moonbot_1698415876-231496_png.rf.e81deb48bc888b37e9f51f95dcd4b483.txt  moonbot_1698415975-871847_png.rf.cb86661f566a5213aaf060d805437616.txt  moonbot_1698415989-4886909_png.rf.eb569bdf1a682c38d246905c8e2e727d.txt  moonbot_1698416042-8978121_png.rf.3c29dded76bf12de41375c6f0df46633.txt  moonbot_1698416091-8003802_png.rf.3430d1585145c2470ae2c2a0dca80bea.txt  moonbot_1698416124-8838844_png.rf.15f7409aca7ddff26f03071dd14337a2.txt  moonbot_1698416333-2469168_png.rf.1427f0f4d620d640412abb8b0fece6a2.txt  (+2 more)
moonbot_camera/config/datasets/train/: labels.cache
moonbot_camera/config/datasets/valid/: labels.cache
moonbot_camera/config/runs/detect/moonbot_perception/: args.yaml  (+1 more)
moonbot_camera/launch/: servicelaunch.py  test.py  yolo.launch.py  yolo.py
moonbot_camera/rviz/: yolo_vis.rviz
moonbot_camera/scripts/: algotest.py  launchservice.py  obj_position.py  yolov8_ros2_pt.py  yolov8_ros2_subscriber.py  yolov8_rs.py
moonbot_control/: CMakeLists.txt  package.xml
moonbot_control/config/: controller_configuration.yaml  detection_param.yaml  moonbot_config.yaml  phantom_config.yaml  phantomx_control.yaml  single_config.yaml
moonbot_control/connection/: LF_con.py  LR_con.py  RF_con.py  RR_con.py
moonbot_control/launch/: limb_control.launch.py  module_detection.launch.py  test_control.launch.py
moonbot_control/scripts/: IK_node.py  body_motion_planner.py  cmd_manager_node.py  gait_generator.py  gait_node.py  launch_detection.py  leg_node.py  maincmd.py  modular.py  moonbot_variables.py  real_pub.py  sim_action.py  sim_pub.py
moonbot_control/scripts/IK/: limb_kinematics.py  parameters.py
moonbot_control/scripts/singlelimb/: LF.py  LR.py  RF.py  RR.py
moonbot_control/src/: climblab_result.py
moonbot_description/: CMakeLists.txt  package.xml
moonbot_description/launch/: launcher.launch.py  limb_visualize.launch.py  urdf_visualize.launch.py
moonbot_description/meshes/: Leg1_Link2.STL  Leg1_link1.STL  Leg1_link2.STL  Leg1_link3.STL  Leg2_Link1.STL  Leg2_Link2.STL  Leg2_Link3.STL  Leg2_link1.STL  Leg2_link2.STL  Leg2_link3.STL  Leg3_Link1.STL  Leg3_Link2.STL  Leg3_link1.STL  Leg3_link2.STL  Leg3_link3.STL  Leg4_Link2.STL  Leg4_Link3.STL  Leg4_link1.STL  Leg4_link2.STL  Leg4_link3.STL  base_link.STL
moonbot_description/meshesX/: BODY.STL  COXA.STL  Leg1_Coxa.STL  Leg1_Femur.STL  Leg1_Tibia.STL  Leg2_Coxa.STL  Leg2_Femur.STL  Leg2_Link1.STL  Leg2_Link2.STL  Leg2_Link3.STL  Leg2_Tibia.STL  Leg2_Wheel.STL  Leg3_Coxa.STL  Leg3_Femur.STL  Leg3_Link1.STL  Leg3_Link2.STL  Leg3_Link3.STL  Leg3_Tibia.STL  Leg3_Wheel.STL  Leg4_Coxa.STL  Leg4_Femur.STL  Leg4_Link1.STL  Leg4_Link2.STL  Leg4_Link3.STL  Leg4_Tibia.STL  Leg4_Wheel.STL  THIGH.STL  TIBIA.STL  WHEEL.STL
moonbot_description/rviz/: urdf_vis.rviz
moonbot_description/urdf/: grieel.urdf  moonbot.urdf  moonbot2.urdf  moonbotX.urdf  moonbotdata.urdf  phantom.urdf  phantom_urdf.xacro  quadruped.urdf  simple.urdf  single.urdf  singleHW.urdf  singleHWLF.urdf  singleHWLR.urdf  singleHWRF.urdf  singleHWRR.urdf
moonbot_description/urdf/Moonbot ver5 URDF/: package.xml
moonbot_description/urdf/Moonbot_1_urdf/: CMakeLists.txt
moonbot_description/urdf/Moonbot_1_urdf/config/: joint_names_Moonbot_1_urdf.yaml
moonbot_description/urdf/Moonbot_1_urdf/launch/: display.launch  gazebo.launch
moonbot_description/urdf/Moonbot_1_urdf/meshes/: Leg1_Link1.STL  Leg3_Link3.STL  base_link.STL
moonbot_description/urdf/Moonbot_1_urdf/urdf/: Moonbot_1_urdf.csv  Moonbot_1_urdf.urdf
moonbot_gazebo/: CMakeLists.txt  package.xml
moonbot_gazebo/launch/: phantom_launch.launch.py  spawn_limb.launch.xml  spawn_moonbot.launch.py  spawn_robot_description.launch.py  spawn_robot_ros2.launch.xml  start_world.launch.py
moonbot_gazebo/scripts/: LF.py  LR.py  RF.py  RR.py  action_joint.py  emergency.py  grieel.py  joint_trajectory_test.py  limb_joint.py  limb_kinematics.py  modular.py  publisher_joint_trajectory_controller.py  walk_demo.py  walker.py
moonbot_gazebo/scripts/IK/: limb_kinematics.py  params.py
moonbot_gazebo/scripts/cmd_manager/: cmd_manager_node.py
moonbot_gazebo/scripts/gait_generator/: gait_planner.py
moonbot_gazebo/src/: RL.csv  RL2.csv  RL3.csv  RL_base_gait_test1.csv  moonbot.py
moonbot_gazebo/worlds/: box_bot_empty 2.world  box_bot_empty.world  moonbot_box.world
moonbot_teleop/: CMakeLists.txt  package.xml
moonbot_teleop/config/: joystick.yaml
moonbot_teleop/launch/: moonbot_teleop.launch.py
moonbot_teleop/src/: moonbot_definitions.hpp  moonbot_teleop_joy.cpp
(+360 files in other folders)
