<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_hardware</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tharit.sinsunthorn.r1@dc.tohoku.ac.jp">tharit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <!-- <depend>rclcpp_lifecycle</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
