<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moonbot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tharit.sinsunthorn.r1@dc.tohoku.ac.jp">tharit</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>moonbot_description</depend>
  <depend>moonbot_control</depend> 
  <depend>gazebo_ros2_control</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <!-- <install>
    <executables>
      <executable>scripts/joint_trajectory_test.py</executable>
    </executable>
  </install> -->

</package>
