<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trial</name>
  <version>0.0.0</version>
  <description>Try to control Dynamixel</description>
  <maintainer email="tharit.sinsunthorn.r1@dc.tohoku.ac.jp">tharit</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>dynamixel_custom_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
